# objnormals

./: .gitignore  LICENSE  pyproject.toml  readme.md
objnormals/: __init__.py  core.py
