[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "objnormals"
version = "0.1.0"
description = "Generate vertex normal data from wavefront .obj files"
readme = "readme.md"
requires-python = ">=3.7"
license = {text = "MIT"} 
authors = [
  { name="Marilia M. Fernandez", email="marilia.mfernandez@gmail.com" }
]
dependencies = [
  "numpy"
]

[project.urls]
"Homepage" = "https://github.com/mariliafernandez/objnormals"

[project.scripts]
objnormals = "objnormals.core:main"

